hive-macro/tests/macro/hive/should_fail/unallowed_dependency_probe_rs.rs
#[hive_macro::hive]
pub mod tests {
    #![allow(unused)]
    use hive_test;
    use probe_rs::Session;
    use std;
    use {
        std::sync,
        std::time,
        {std::alloc, std::io},
    };
}

fn main() {}
